Enhance project configuration and add web support
- Updated electron.vite.config.ts to include alias for shared components.
- Added new web configuration file (vite.web.config.ts) for serving the renderer.
- Introduced PostCSS and Tailwind CSS for styling, with corresponding configuration files (postcss.config.js, tailwind.config.js).
- Updated package.json and package-lock.json to include new dependencies for Tailwind CSS and PostCSS.
- Refactored TypeScript configuration to support module resolution for shared components.
- Implemented a new configuration page in the renderer with responsive design and state management for regions.
- Added CSS styles for the configuration page and integrated with the main application logic.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html lang="zh-Hant">
+<html class="dark" lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ImplantSnap Config</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL@24,400,0&display=swap" rel="stylesheet" />
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="h-screen overflow-hidden antialiased bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100">
+    <div id="app" class="h-full w-full"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
